tests/NormalTests/paczka1/small_fuzzy/88027708.err
Error in line 4: cDIEGax19 S157 95,9
Error in line 9: =575 =829 31,6
Error in line 7: A575 S157 29,2
Error in line 10: A575 A829 50,6
Error in line 11: u3BXFTA1U S157 31,5
